refactor
rename, add comment and fix doc
